# premium_dashboard

./: .gitignore  README.md  app.py  config.yaml  creative_app.py  deploy.sh  docker-compose.yml  hoh.csv  images.ipynb  next_steps_plots.ipynb  pyproject.toml  requirements.txt  tmp copy.ipynb  tmp.ipynb  tmp.py
docker/: premium_dashboard.dockerfile
metadata/: globals.py  model_features.py  nltk_stuff.py
my_packages/streamlit_authenticator/: __init__.py  authenticate.py  hasher.py  utils.py
play/: audience.ipynb  audience_by_shop.ipynb  benchmarks.ipynb  black_friday_analysis.ipynb  black_friday_discounts.ipynb  black_friday_saving.ipynb  facebook_creative_descriptive.ipynb  facebook_target_descriptive.ipynb  get_performance.ipynb  google_campaign_type_descriptive.ipynb  images.ipynb  itmp.ipynb  perform_test.ipynb  relevant_shops.py  tmp.py  tony_analysis.ipynb
src/: types.py
src/Facebook_API/: get_preview_shareable_link.py
src/abc/: descriptive.py  s3_reader_writer.py
src/ad_creative_features_pingers/: ping_my_creative_by_shop_id.py  ping_my_creative_shop_ids.py
src/app/: __init__.py  authenticate.py  frontend_names.py  select_shop_and_load_data.py
src/crud/: __init__.py  base.py  creative_tab_ads.py  creative_tab_information.py  credentials.py  currency_exchange_rate.py  customer_first_order_properties.py  import_progress.py  import_status.py  insight.py  red_flag_result.py  shop.py  shop_billing.py  shop_ltv_filter.py  user.py
src/database/: base_class.py  context_manager.py  insert_from_select.py  myDB.py  session.py
src/fb_api/: __init__.py  get_preview_shareable_link.py
src/feature_extractors/: EText.py  __init__.py  add_performance_columns.py  extract_text_and_type.py  get_target_features.py  get_text_features.py  text_analysis_functions.py
src/image_analysis/: color_play.ipynb  image_analysis.ipynb  rekognition.ipynb  relevant_uuids.py  utils.py
src/inserters_and_updaters/: upsert_creative_by_shop_id.py
src/interfaces/: __init__.py  descriptive.py  s3_reader_writer.py  tab.py
src/models/: __init__.py  celery_failed_task.py  creative_tab_ads.py  creative_tab_information.py  credentials.py  crm.py  currency_exchange_rate.py  customer_first_order_properties.py  import_progress.py  insight.py  ltv_breakdown.py  object.py  red_flag_result.py  shop.py  shop_billing.py  user.py  (+1 more)
(+456 files in other folders)
