[tool.poetry]
name = "premium-dashboard"
version = "0.1.0"
description = ""
authors = ["sanjin-lebesgue <sanjin@lebesgue.io>"]
readme = "README.md"
packages = [{include = "premium_dashboard"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
