[tool.poetry]
name = "premium-dashboard"
version = "0.1.0"
description = ""
authors = ["sanjin-lebesgue <sanjin@lebesgue.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pandas = "~2.0.3"
streamlit = "~1.27.0"
opencv-python = "^4.7.0.72"
python-dotenv = "^1.0.0"
streamlit-option-menu = "^0.3.2"
sqlalchemy = "1.4.35"
pyyaml = "^6.0"
bcrypt = "^4.0.1"
extra-streamlit-components = "^0.1.56"
loguru = "^0.7.0"
psycopg2-binary = "^2.9.6"
emoji = "^2.2.0"
pydantic = {extras = ["email"], version = "^1.10.7"}
nltk = "^3.8.1"
langdetect = "^1.0.9"
textblob = "^0.17.1"
wordcloud = "^1.9.1.1"
boto3 = "^1.26.133"
scikit-learn = "^1.2.2"
plotly = "^5.14.1"
seaborn = "~0.13.0"
statsmodels = "^0.14.0"
pyjwt = "^2.7.0"
altair = "4.2.2"
ipykernel = "^6.23.0"
jupyter = "^1.0.0"
emojis = "^0.7.0"
black = "^23.7.0"
python-intervals = "^1.10.0.post1"
streamlit-modal = "^0.1.0"
facebook-business = "^17.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
